# Android_RenderingEngine

./: README.md
JIHOON_MEngine/: settings.gradle.kts
JIHOON_MEngine/app/: build.gradle.kts
JIHOON_MEngine/app/src/androidTest/java/com/example/jihoon_mengine/: ExampleInstrumentedTest.java
JIHOON_MEngine/app/src/main/: AndroidManifest.xml
JIHOON_MEngine/app/src/main/cpp/: CMakeLists.txt  Camera.cpp  Camera.h  EGLRenderer.cpp  EGLRenderer.h  FirstPersonController.cpp  FirstPersonController.h  Geometry.cpp  Geometry.h  Interface.h  Light.cpp  Light.h  RenderObject.cpp  RenderObject.h  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h  SimpleMath.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  native-lib.cpp
JIHOON_MEngine/app/src/main/java/com/example/jihoon_mengine/: JoystickView.java  MainActivity.java
JIHOON_MEngine/app/src/main/res/layout/: activity_main.xml
JIHOON_MEngine/app/src/main/res/values/: strings.xml  themes.xml
JIHOON_MEngine/app/src/main/res/values-night/: themes.xml
JIHOON_MEngine/app/src/test/java/com/example/jihoon_mengine/: ExampleUnitTest.java
JIHOON_MEngine/gradle/wrapper/: gradle-wrapper.properties
